# deusmagi-server

./: .gitignore  .gitmodules  CMakeLists.txt  atrinikloop.sh  server.bat  server.cfg  server.sh
arch/: hfiles
install_data/: motd
maps/python/: Interface.py  QuestManager.py
maps/python/events/: python_exception.py
maps/python/events/init/: documentation.py
src/http_server/: http_server.c
src/include/: version.h
src/plugins/plugin_python/: atrinik_archetype.c  atrinik_map.c  atrinik_object.c  atrinik_party.c  atrinik_player.c  atrinik_region.c  attr_list.c  plugin_python.c
src/plugins/plugin_python/include/: plugin_python.h
src/server/: main.c
src/types/: player.c
tools/: http_server.py
